--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "grunt-wiredep",
+  "name": "grunt-npm-wiredep",
   "description": "Inject your Bower dependencies right into your HTML from Grunt.",
   "version": "3.0.1",
-  "homepage": "http://stephenplusplus.github.io/grunt-wiredep",
+  "homepage": "http://github.com/MattBeaty/grunt-wiredep",
   "author": {
-    "name": "Stephen Sawchuk",
-    "email": "sawchuk@gmail.com",
-    "url": "http://github.com/stephenplusplus"
+    "name": "Matt Beaty",
+    "email": "mbeaty@outlook.com",
+    "url": "http://github.com/MattBeaty"
   },
   "keywords": [
     "gruntplugin",
@@ -19,11 +19,11 @@
     "component",
     "postinstall"
   ],
-  "repository": "stephenplusplus/grunt-wiredep",
+  "repository": "MattBeaty/grunt-wiredep",
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/stephenplusplus/grunt-wiredep/blob/master/LICENSE-MIT"
+      "url": "https://github.com/MattBeaty/grunt-wiredep/blob/master/LICENSE-MIT"
     }
   ],
   "engines": {
@@ -34,6 +34,8 @@
     "grunt": ">=0.4.0"
   },
   "dependencies": {
-    "wiredep": "^4.0.0"
+    "wiredep": "^4.0.0",
+    "npm-wiredep": "0.0.4" 
   }
+
 }
